# cveta2

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  AGENT_DOCS.md  CLAUDE.md  CONTRIBUTING.md  DATASET_FORMAT.md  README.md  annotations.xml  main.py  pyproject.toml
cveta2/: __init__.py  __main__.py  cli.py  client.py  config.py  dataset_partition.py  exceptions.py  image_downloader.py  image_uploader.py  models.py  projects_cache.py  s3_types.py  s3_utils.py  split.py
cveta2/_client/: __init__.py  context.py  dtos.py  extractors.py  mapping.py  ports.py  sdk_adapter.py
cveta2/commands/: _helpers.py  _task_selector.py  convert.py  doctor.py  fetch.py  ignore.py  labels.py  merge.py  s3_sync.py  setup.py  upload.py
cveta2/presets/: __init__.py  default.yaml
scripts/: README.md  clone_project_to_s3.py  collect.py  export_cvat_fixtures.py  integration_stop.sh  integration_test.sh  integration_up.sh  upload_dataset_to_cvat.py
tests/: __init__.py  conftest.py  test_cli_images.py  test_cli_s3_sync.py  test_convert.py  test_cvat_fixtures.py  test_doctor.py  test_extractors.py  test_fake_cvat_project.py  test_fetch_task.py  test_image_cache_config.py  test_image_downloader.py  test_image_uploader.py  test_labels.py  test_mapping.py  test_merge.py  test_models.py  test_partition.py  test_pipeline_integration.py  test_preset_config.py  test_upload_label_validation.py
tests/fixtures/: __init__.py  fake_cvat_api.py  fake_cvat_project.py  load_cvat_fixtures.py
tests/fixtures/cvat/coco8-dev/: project.json
tests/fixtures/cvat/coco8-dev/tasks/: 11_normal.json  12_all-empty.json  13_all-removed.json  14_zero-frame-empty-last-removed.json  15_all-bboxes-moved.json  16_all-except-first-empty.json  17_frames-1-2-removed.json
tests/fixtures/data/: coco8.yaml
tests/integration/: __init__.py  conftest.py  docker-compose.override.yml  docker-compose.ui.yml  seed_cvat.py  test_e2e.py  test_upload.py
