[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cveta2"
version = "0.1.0"
description = "CVAT project annotation utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.42.49",
    "cvat-sdk>=2.56.0",
    "loguru>=0.7.3",
    "pandas>=2.0.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.0",
    "types-pyyaml>=6.0.12.20250915",
    "questionary>=2.0.0",
    "tqdm>=4.66.0",
    "tenacity>=9.1.4",
]

[project.scripts]
cveta2 = "cveta2.cli:main"

[dependency-groups]
dev = [
    "boto3-stubs>=1.42.49",
    "mypy>=1.19.1",
    "pandas-stubs>=2.3.3.260113",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "types-tqdm>=4.66.0.20240417",
    "vulture>=2.14",
    # pandas-stubs may require these transitive type stubs; re-add if mypy
    # reports missing stubs for openpyxl / xlrd / scipy / python-dateutil:
    # "scipy-stubs>=1.15.3.0",
    # "types-openpyxl>=3.1.5.20250919",
    # "types-python-dateutil>=2.9.0.20260124",
    # "types-xlrd>=2.0.0.20251020",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # missing-trailing-comma - conflicts with ruff formatter
    "ISC001",  # single-line-implicit-string-concatenation - conflicts with formatter
    "EM",      # flake8-errmsg - overly pedantic for small projects
    "TRY003",  # raise-vanilla-args - same as EM
    "D213",
    "D203",
    "RUF001",  # ambiguous-unicode-character - project uses Russian (Cyrillic) strings
    "PERF203", # try-except-in-loop - false positive in modern Python (3.11+)
    "PLR2004",
]
fixable = ["ALL"]
exclude = ["scripts/**"]  # lint only; format still runs on scripts

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "PLR2004", "PLC0415", "D103", "S311"]
"main.py" = ["F401"]  # re-export wrapper

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["scripts/"]

[[tool.mypy.overrides]]
module = ["cvat_sdk.*"]
ignore_missing_imports = true


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short"]

[tool.vulture]
min_confidence = 80
paths = ["cveta2", "main.py"]
